Usagers, Commande et LigneCommande

--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -70,3 +70,49 @@ panier.add:
         _locale: '%app.supported_locales%'
     defaults:
         _locale: fr
+
+# Usager
+usager_index:
+    path: /{_locale}/usager
+    controller: App\Controller\UsagerController:index
+    requirements:
+        _locale: '%app.supported_locales%'
+    defaults:
+        _locale: fr
+    methods:    GET
+
+usager_new:
+    path: /{_locale}/usager/new
+    controller: App\Controller\UsagerController:new
+    requirements:
+        _locale: '%app.supported_locales%'
+    defaults:
+        _locale: fr
+    methods:    GET|POST
+
+usager_edit:
+    path: /{_locale}/usager/{id}/edit
+    controller: App\Controller\UsagerController:edit
+    requirements:
+        _locale: '%app.supported_locales%'
+    defaults:
+        _locale: fr
+    methods:    GET|POST
+
+usager_delete:
+    path: /{_locale}/usager/{id}
+    controller: App\Controller\UsagerController:delete
+    requirements:
+        _locale: '%app.supported_locales%'
+    defaults:
+        _locale: fr
+    methods:    DELETE
+
+usager_show:
+    path: /{_locale}/usager/{id}
+    controller: App\Controller\UsagerController:show
+    requirements:
+        _locale: '%app.supported_locales%'
+    defaults:
+        _locale: fr
+    methods:    GET
