feat: docker + security

--- a/.env
+++ b/.env
@@ -30,5 +30,5 @@ APP_SECRET=6167f148216ccb5afcb55bd06da6e366
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.7"
-DATABASE_URL="mysql://admin:admin@127.0.0.1:3306/mi5?serverVersion=13&charset=utf8"
+DATABASE_URL="mysql://mi5:pass@mysql:3306/mi5?serverVersion=8.0&charset=utf8"
 ###< doctrine/doctrine-bundle ###
