--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -1,7 +1,11 @@
 doctrine:
     dbal:
-        url: '%env(resolve:DATABASE_URL)%'
-
+        dbname: 'mi5'
+        host: 'mysql'
+        port: '3306'
+        user: 'mi5'
+        password: 'pass'
+        driver: 'pdo_mysql'
         # IMPORTANT: You MUST configure your server version,
         # either here or in the DATABASE_URL env var (see .env file)
         #server_version: '13'
