--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -71,9 +71,16 @@ panier.add:
     defaults:
         _locale: fr
 
-# Usager
+panier.validation:
+    path: /{_locale}/panier/validation
+    controller: App\Controller\PanierController:validation
+    requirements:
+        _locale: '%app.supported_locales%'
+    defaults:
+        _locale: fr
+
 usager_index:
-    path: /backoffice/{_locale}/usager
+    path: /admin/{_locale}/usager
     controller: App\Controller\UsagerController:index
     requirements:
         _locale: '%app.supported_locales%'
@@ -82,7 +89,7 @@ usager_index:
     methods:    GET
 
 usager_new:
-    path: /backoffice/{_locale}/usager/new
+    path: /admin/{_locale}/usager/new
     controller: App\Controller\UsagerController:new
     requirements:
         _locale: '%app.supported_locales%'
@@ -91,7 +98,7 @@ usager_new:
     methods:    GET|POST
 
 usager_edit:
-    path: /backoffice/{_locale}/usager/{id}/edit
+    path: /admin/{_locale}/usager/{id}/edit
     controller: App\Controller\UsagerController:edit
     requirements:
         _locale: '%app.supported_locales%'
@@ -100,7 +107,7 @@ usager_edit:
     methods:    GET|POST
 
 usager_delete:
-    path: /backoffice/{_locale}/usager/{id}
+    path: /admin/{_locale}/usager/{id}
     controller: App\Controller\UsagerController:delete
     requirements:
         _locale: '%app.supported_locales%'
@@ -109,10 +116,18 @@ usager_delete:
     methods:    DELETE
 
 usager_show:
-    path: /backoffice/{_locale}/usager/{id}
+    path: /admin/{_locale}/usager/{id}
     controller: App\Controller\UsagerController:show
     requirements:
         _locale: '%app.supported_locales%'
     defaults:
         _locale: fr
     methods:    GET
+
+app_login:
+    path: /login
+    controller: App\Controller\SecurityController:login
+
+app_logout:
+    path: /logout
+    controller: App\Controller\SecurityController:logout
